Chats fragment working.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,4 @@ dependencies {
 
 }
 
-apply plugin: 'com.google.gms.google-services' //firebase plugin
-
+apply plugin: 'com.google.gms.google-services'
